[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Map_Elements/One_Way_Platform/One_Way_Platform.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 4 )

[node name="One_Way_Platform" type="StaticBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Player_Detecter" type="Area2D" parent="."]
position = Vector2( 0, -12 )
monitorable = false
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="Player_Detecter"]
shape = SubResource( 3 )

[node name="Drop_Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true

[node name="Body" type="Polygon2D" parent="."]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( -64, 8, -64, -8, 64, -8, 64, 8, 48, 0, -48, 0 )

[node name="Darker" type="Polygon2D" parent="Body"]
color = Color( 0.266667, 0.227451, 0.219608, 1 )
polygon = PoolVector2Array( -64, 8, -48, -4, 48, -4, 64, 8, 48, 0, -48, 0 )

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 2 )
one_way_collision = true
[connection signal="body_entered" from="Player_Detecter" to="." method="_on_player_on_top"]
[connection signal="body_exited" from="Player_Detecter" to="." method="_on_player_exited"]
[connection signal="timeout" from="Drop_Timer" to="." method="_on_Drop_timeout"]
